deploy/simpson-and-bouvier/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
