deploy/simpson-and-bouvier/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: $(SERVICE_NAME)
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
